--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <form method="POST" enctype="multipart/form-data">
+  	     <input class="" style="width:300px; margin:10 5 5 0" type="text" name="id" placeholder="id">
+
 	     <input class="" style="width:300px; margin:10 5 5 0" type="text" name="title" placeholder="title">
        <input class="" style="width:300px; margin:10 5 5 0" type="text" name="location" placeholder="location">
   <input class="" style="width:300px; margin:10 5 5 0" type="text" name="salary" placeholder="salary">
